--- a/deployment/kubernetes/manifests/kafka-service.Deployment.yaml
+++ b/deployment/kubernetes/manifests/kafka-service.Deployment.yaml
@@ -29,24 +29,35 @@ spec:
     spec:
       containers:
       - env:
-        - name: KAFKA_ADVERTISED_HOST_NAME
-          value: 192.168.64.5
-        - name: KAFKA_ADVERTISED_PORT
-          value: "9092"
+        - name: KAFKA_BROKER_ID
+          value: "1"
         - name: KAFKA_ZOOKEEPER_CONNECT
           value: zookeeper:2181
-        - name: KAFKA_CREATE_TOPICS
-          value: proto-spans:1:1,metricpoints:1:1,mdm:1:1,span-buffer:1:1,graph-nodes:1:1,ewma-metrics:1:1,constant-metrics:1:1,pewma-metrics:1:1,anomalies:1:1,aa-metrics:1:1,mapped-metrics:1:1
-        - name: KAFKA_LOG_MESSAGE_TIMESTAMP_TYPE
-          value: LogAppendTime
-        - name: KAFKA_HEAP_OPTS
-          value: -Xmx512m -Xms512m
-        image: wurstmeister/kafka:0.11.0.1
+        - name: KAFKA_ADVERTISED_LISTENERS
+          value: PLAINTEXT://kafka-service:9092,PLAINTEXT_HOST://localhost:29092
+        - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
+          value: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+        - name: KAFKA_INTER_BROKER_LISTENER_NAME
+          value: PLAINTEXT
+        - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
+          value: "1"
+        # - name: KAFKA_ADVERTISED_HOST_NAME
+        #   value: 10.199.94.5
+        # - name: KAFKA_ADVERTISED_PORT
+        #   value: "9092"
+        # - name: KAFKA_ZOOKEEPER_CONNECT
+        #   value: zookeeper:2181
+        # - name: KAFKA_CREATE_TOPICS
+        #   value: proto-spans:1:1,metricpoints:1:1,mdm:1:1,span-buffer:1:1,graph-nodes:1:1,ewma-metrics:1:1,constant-metrics:1:1,pewma-metrics:1:1,anomalies:1:1,aa-metrics:1:1,mapped-metrics:1:1
+        # - name: KAFKA_LOG_MESSAGE_TIMESTAMP_TYPE
+        #   value: LogAppendTime
+        # - name: KAFKA_HEAP_OPTS
+        #   value: -Xmx512m -Xms512m
+        image: confluentinc/cp-kafka:latest
         imagePullPolicy: IfNotPresent
         name: kafka-service
         ports:
         - containerPort: 9092
-          hostPort: 9092
           protocol: TCP
         resources:
           limits:
