This is a bit of a gross WIP
elasticsearch doesn't use a strict uid:gid https://github.com/docker-library/elasticsearch/blob/9f14d95917805470ce1303d61add6ae195d24c70/5/alpine/Dockerfile#L4

Cassandra and Postgres and a few others use a strict uid

https://github.com/docker-library/cassandra/blob/064fb4e2682bf9c1909e4cb27225fa74862c9086/3.11/Dockerfile#L5

--- a/deployment/kubernetes/manifests/elasticsearch.Deployment.yaml
+++ b/deployment/kubernetes/manifests/elasticsearch.Deployment.yaml
@@ -45,6 +45,7 @@ spec:
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
-      securityContext: {}
+      securityContext:
+        runAsUser: 100
       terminationGracePeriodSeconds: 30
 status: {}
