--- a/deployment/kubernetes/manifests/trace-indexer.Deployment.yaml
+++ b/deployment/kubernetes/manifests/trace-indexer.Deployment.yaml
@@ -41,7 +41,7 @@ spec:
           value: 200m
         - name: JAVA_XMX
           value: 200m
-        image: expediadotcom/haystack-trace-backend-cassandra:316f53fb22b01984099db5c2b99049b703483082
+        image: expediadotcom/haystack-trace-backend-cassandra:1.0.10
         imagePullPolicy: IfNotPresent
         livenessProbe:
           exec:
@@ -76,7 +76,7 @@ spec:
           value: 200m
         - name: JAVA_XMX
           value: 200m
-        image: expediadotcom/haystack-trace-indexer:316f53fb22b01984099db5c2b99049b703483082
+        image: expediadotcom/haystack-trace-indexer:1.0.10
         imagePullPolicy: IfNotPresent
         livenessProbe:
           exec:
