--- a/deployment/kubernetes/manifests/timeseries-aggregator.Deployment.yaml
+++ b/deployment/kubernetes/manifests/timeseries-aggregator.Deployment.yaml
@@ -41,7 +41,7 @@ spec:
           value: 200m
         - name: JAVA_XMX
           value: 200m
-        image: expediadotcom/haystack-timeseries-aggregator:1.1
+        image: zoidbergwill/haystack-timeseries-aggregator
         imagePullPolicy: IfNotPresent
         livenessProbe:
           exec:
