--- a/deployment/kubernetes/manifests/pitchfork.Deployment.yaml
+++ b/deployment/kubernetes/manifests/pitchfork.Deployment.yaml
@@ -29,15 +29,17 @@ spec:
     spec:
       containers:
       - env:
-        - name: PITCHFORK_FORWARDERS_ZIPKIN_HTTP_ENDPOINT
-          value: http://zipkin:9411/api/v2/spans
-        - name: PITCHFORK_FORWARDERS_ZIPKIN_HTTP_ENABLED
+        - name: PITCHFORK_INGRESS_KAFKA_ENABLED
           value: "true"
         - name: PITCHFORK_FORWARDERS_LOGGING_ENABLED
           value: "true"
         - name: PITCHFORK_FORWARDERS_LOGGING_LOG_FULL_SPAN
           value: "true"
-        - name: PITCHFORK_INGRESS_KAFKA_ENABLED
+        - name: PITCHFORK_FORWARDERS_ZIPKIN_HTTP_ENABLED
+          value: "true"
+        - name: PITCHFORK_FORWARDERS_ZIPKIN_HTTP_ENDPOINT
+          value: http://zipkin:9411/api/v2/spans
+        - name: PITCHFORK_FORWARDERS_HAYSTACK_KAFKA_ENABLED
           value: "true"
         image: hotelsdotcom/pitchfork
         imagePullPolicy: IfNotPresent
