--- a/deployment/kubernetes/manifests/metrictank.Deployment.yaml
+++ b/deployment/kubernetes/manifests/metrictank.Deployment.yaml
@@ -45,6 +45,9 @@ spec:
           value: monitoring-influxdb-graphite.kube-system.svc:2003
         - name: MT_MEMORY_IDX_TAG_SUPPORT
           value: "true"
+        - name: MT_PROFTRIGGER_PATH
+          value: /var/lib/metrictank/$HOSTNAME
+        workingDir: /tmp
         image: grafana/metrictank:0.10.1
         imagePullPolicy: IfNotPresent
         name: metrictank
@@ -57,6 +60,12 @@ spec:
             memory: 250Mi
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
+        volumeMounts:
+        - mountPath: /var/lib/metrictank
+          name: storage
+      volumes:
+      - emptyDir: {}
+        name: storage
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
