Allow searching by traceId too

--- a/deployment/kubernetes/manifests/whitelist-json.ConfigMap.yaml
+++ b/deployment/kubernetes/manifests/whitelist-json.ConfigMap.yaml
@@ -7,6 +7,11 @@ data:
             "type": "string",
             "enabled": true,
             "searchContext": "trace"
+        },{
+          "name": "traceId",
+          "type": "string",
+          "enabled": true,
+          "searchContext": "trace"
         }]
     }
 kind: ConfigMap
